--- a/packages/lib/server/locales/bn/common.json
+++ b/packages/lib/server/locales/bn/common.json
@@ -116,6 +116,8 @@
   "delete_calendar_event_error": "ক্যালেন্ডার ইভেন্ট মুছতে অক্ষম।",
   "already_signed_up_for_this_booking_error": "আপনি ইতিমধ্যে এই বুকিংয়ের জন্য সাইন আপ করেছেন।",
   "hosts_unavailable_for_booking": "কিছু হোস্ট বুকিংয়ের জন্য অনুপলব্ধ।",
+  "fixed_hosts_unavailable_for_booking": "কিছু নির্দিষ্ট হোস্ট বুকিং এর জন্য অনুপলব্ধ।",
+  "round_robin_hosts_unavailable_for_booking": "কোন রাউন্ড রবিন হোস্ট বুকিং এর জন্য উপলব্ধ নেই।",
   "help": "সাহায্য",
   "price": "দাম",
   "paid": "প্রদত্ত",
@@ -3359,5 +3361,6 @@
   "license_validation_failed": "লাইসেন্স কী যাচাই করতে ব্যর্থ হয়েছে",
   "license_key_saved": "লাইসেন্স কী সফলভাবে সংরক্ষিত হয়েছে",
   "timezone_mismatch_tooltip": "আপনি আপনার প্রোফাইল টাইমজোন ({{userTimezone}}) অনুসারে রিপোর্ট দেখছেন, যখন আপনার ব্রাউজার টাইমজোন ({{browserTimezone}}) এ সেট করা আছে",
+  "event_type_no_hosts": "ইভেন্ট টাইপে কোন হোস্ট নির্ধারিত নেই",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑ুষান্ত"
 }
