--- a/packages/lib/server/locales/fr/common.json
+++ b/packages/lib/server/locales/fr/common.json
@@ -116,6 +116,8 @@
   "delete_calendar_event_error": "Impossible de supprimer l'événement de Calendrier.",
   "already_signed_up_for_this_booking_error": "Vous êtes déjà inscrit(e) à cette réservation.",
   "hosts_unavailable_for_booking": "Certains hôtes sont indisponibles pour la réservation.",
+  "fixed_hosts_unavailable_for_booking": "Certains des hôtes fixes ne sont pas disponibles pour la réservation.",
+  "round_robin_hosts_unavailable_for_booking": "Aucun hôte en rotation n'est disponible pour la réservation.",
   "help": "Aide",
   "price": "Prix",
   "paid": "Payé",
@@ -3359,5 +3361,6 @@
   "license_validation_failed": "Échec de la validation de la clé de licence",
   "license_key_saved": "Clé de licence enregistrée avec succès",
   "timezone_mismatch_tooltip": "Vous consultez le rapport selon le fuseau horaire de votre profil ({{userTimezone}}), alors que votre navigateur est configuré sur le fuseau horaire ({{browserTimezone}})",
+  "event_type_no_hosts": "Aucun hôte n'est assigné à ce type d'événement",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Ajoutez vos nouvelles chaînes ci-dessus ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
