--- a/packages/lib/server/locales/ja/common.json
+++ b/packages/lib/server/locales/ja/common.json
@@ -116,6 +116,8 @@
   "delete_calendar_event_error": "カレンダーイベントを削除できません。",
   "already_signed_up_for_this_booking_error": "この予約にはすでにサインアップしています。",
   "hosts_unavailable_for_booking": "一部のホストは予約できません。",
+  "fixed_hosts_unavailable_for_booking": "一部の固定ホストは予約できません。",
+  "round_robin_hosts_unavailable_for_booking": "予約可能なラウンドロビンホストがありません。",
   "help": "ヘルプ",
   "price": "料金",
   "paid": "支払い済み",
@@ -3359,5 +3361,6 @@
   "license_validation_failed": "ライセンスキーの検証に失敗しました",
   "license_key_saved": "ライセンスキーが正常に保存されました",
   "timezone_mismatch_tooltip": "あなたはプロフィールのタイムゾーン（{{userTimezone}}）に基づいてレポートを表示していますが、ブラウザのタイムゾーンは（{{browserTimezone}}）に設定されています",
+  "event_type_no_hosts": "イベントタイプにホストが割り当てられていません",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ この上に新しい文字列を追加してください ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
