--- a/packages/lib/server/locales/sk-SK/common.json
+++ b/packages/lib/server/locales/sk-SK/common.json
@@ -116,6 +116,8 @@
   "delete_calendar_event_error": "Nepodarilo sa odstrániť udalosť v kalendári.",
   "already_signed_up_for_this_booking_error": "Už ste prihlásený na túto rezerváciu.",
   "hosts_unavailable_for_booking": "Niektorí hostitelia nie sú k dispozícii na rezerváciu.",
+  "fixed_hosts_unavailable_for_booking": "Niektorí z pevne určených hostiteľov nie sú k dispozícii na rezerváciu.",
+  "round_robin_hosts_unavailable_for_booking": "Žiadny z hostiteľov Round Robin nie je k dispozícii na rezerváciu.",
   "help": "Pomoc",
   "price": "Cena",
   "paid": "Zaplatené",
@@ -3359,5 +3361,6 @@
   "license_validation_failed": "Nepodarilo sa overiť licenčný kľúč",
   "license_key_saved": "Licenčný kľúč bol úspešne uložený",
   "timezone_mismatch_tooltip": "Prezeráte si správu na základe časového pásma vášho profilu ({{userTimezone}}), zatiaľ čo váš prehliadač je nastavený na časové pásmo ({{browserTimezone}})",
+  "event_type_no_hosts": "K typu udalosti nie sú priradení žiadni hostitelia",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Pridajte svoje nové reťazce nad túto líniu ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
